# documentation1

./: index.md  layout.html  pyproject.toml  requirements.txt  versions.json
Doc/: conf.py
latest/: .buildinfo  changelog.html  genindex.html  guide.html  index.html  search.html
master/: .buildinfo  changelog.html  genindex.html  index.html  search.html
v1.0.0/: .buildinfo  install.html  search.html
v1.0.1/: .buildinfo  genindex.html  guide.html  index.html  install.html  search.html
v1.0.10/: .buildinfo  changelog.html  guide.html  objects.inv
v1.0.11/: .buildinfo  genindex.html  guide.html  index.html  install.html  search.html
v1.0.12/: .buildinfo  genindex.html  index.html  install.html  search.html
v1.0.13/: .buildinfo  install.html  search.html
v1.0.14/: .buildinfo  changelog.html  genindex.html  guide.html
v1.0.15/: .buildinfo  index.html
v1.0.16/: .buildinfo  changelog.html  genindex.html  guide.html  install.html  search.html
v1.0.17/: .buildinfo  changelog.html  genindex.html  guide.html  index.html  search.html
v1.0.18/: .buildinfo  changelog.html  genindex.html  guide.html  index.html  install.html  search.html
v1.0.19/: .buildinfo  guide.html  install.html  search.html
v1.0.2/: .buildinfo  changelog.html  genindex.html  index.html  install.html  search.html
v1.0.20/: .buildinfo  genindex.html  index.html  install.html  search.html
v1.0.3/: .buildinfo  changelog.html  guide.html  index.html  install.html
v1.0.4/: .buildinfo  genindex.html  guide.html  index.html  search.html
v1.0.5/: .buildinfo  genindex.html  install.html
(+148 files in other folders)
