[tool.poetry]
name = "your-doc-project"
version = "0.1.0"
description = "Documentation for your project using Sphinx"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.2.6"
sphinx-multiversion = "^0.2.4"
sphinx-rtd-theme = "^1.2.1"  # add this line
myst-parser = "^2.0.0"       # if you use Markdown docs


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
